--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -49,8 +50,7 @@ button {
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button:focus,.button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
